Added AreaMine enchantment + some utility

--- a/src/main/resources/assets/bettertoolsmod/lang/en_us.json
+++ b/src/main/resources/assets/bettertoolsmod/lang/en_us.json
@@ -15,8 +15,9 @@
   "itemGroup.bettertoolsmod": "Better Tools",
   "enchantment.bettertoolsmod.lightning_striker": "Lightning Striker",
   "enchantment.bettertoolsmod.lifesteal": "Lifesteal",
-  "enchantment.bettertoolsmod.protectionthorn": "Rammus Shield",
+  "enchantment.bettertoolsmod.rammus_shield": "Rammus Shield",
   "enchantment.bettertoolsmod.firemaster": "Firemaster",
+  "enchantment.bettertoolsmod.area_miner": "Area Miner",
   "enchantment.bettertoolsmod.nightvision": "Eagle Eye",
   "item.bettertoolsmod.emerald_helmet": "Emerald Helmet",
   "item.bettertoolsmod.emerald_chestplate": "Emerald Chestplate",
